<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:onClick="openUserList"
            android:text="@string/list_user_button" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:onClick="openUserManagement"
            android:text="@string/register_user_button" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:onClick="openFlightMenu"
            android:text="@string/flights_button" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:onClick="openPromoList"
            android:text="@string/promo_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>